# thesis-agents

./: .env.example  .gitignore  AGENTS.md  CHECKPOINTS.md  CLAUDE.md  config.py  feature_list.json  init.sh  pyproject.toml
.claude/agents/: implementer.md  leader.md  reviewer.md
.claude/rules/: architecture.md  conventions.md  verification.md
progress/: current.md  history.md  impl_agent_definitions.md  impl_agent_result_logging.md  impl_cli.md  impl_controller.md  impl_formats.md  impl_openrouter_client.md  impl_project_skeleton.md  impl_rubric.md  impl_schemas.md  impl_verify.md  review_agent_definitions.md  review_agent_result_logging.md  review_cli.md  review_controller.md  review_formats.md  review_openrouter_client.md  review_project_skeleton.md  review_rubric.md  review_schemas.md  review_verify.md
prompts/: judge.md  researcher.md  reviewer.md  writer.md
src/thesis_agents/: __init__.py  __main__.py  agents.py
src/thesis_agents/adapters/: __init__.py  openrouter.py  tools.py
src/thesis_agents/adapters/formats/: __init__.py  prose.py  slides.py
src/thesis_agents/core/: __init__.py  controller.py  rubric.py  verify.py
src/thesis_agents/entrypoints/: __init__.py  cli.py
src/thesis_agents/schemas/: __init__.py  models.py
tests/: conftest.py
tests/unit/: test_agent_definitions.py  test_agent_result_logging.py  test_cli.py  test_config.py  test_controller.py  test_formats.py  test_openrouter_client.py  test_rubric.py  test_schemas.py  test_verify.py
