[project]
name = "thesis-agents-python"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "openai-agents==0.18.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py314"
# main.py is a stray PyCharm sample outside the architecture (§3 puts the
# entrypoint under src/thesis_agents/entrypoints/); excluded until removed.
extend-exclude = ["main.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
markers = [
    "integration: requires real external services (excluded from init.sh)",
]
