[project]
name = "thesis-agents-python"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "openai-agents==0.18.2",
    "pydantic==2.13.4",
    "python-docx==1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src/ layout: the importable package is src/thesis_agents. Root-level config.py
# stays out of the wheel by design (architecture §3 keeps it at the root); it
# resolves at runtime via the cwd that `python -m thesis_agents` puts on sys.path.
[tool.hatch.build.targets.wheel]
packages = ["src/thesis_agents"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88
target-version = "py314"
# main.py is a stray PyCharm sample outside the architecture (§3 puts the
# entrypoint under src/thesis_agents/entrypoints/); excluded until removed.
extend-exclude = ["main.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
markers = [
    "integration: requires real external services (excluded from init.sh)",
]
